tests/specs/node/dynamic_import_and_require_dual/resolution_mode_require_jsdoc.js
// @ts-check

/** @import { kind } from "package" with { 'resolution-mode': 'require' } */

/**
 * @param {typeof kind} myValue
 */
export function log(myValue) {
  console.log(myValue);
}

log("value");
